implemented aggregation algorithms